[gd_scene format=3 uid="uid://dmyh7ah4pxn73"]

[ext_resource type="Script" uid="uid://5biupq7d7ksv" path="res://enemy/clawn_common/clawn_common.gd" id="1_mayyk"]
[ext_resource type="Texture2D" uid="uid://2vu5xbcxyotb" path="res://enemy/clawn_common/clawn.png" id="2_mayyk"]
[ext_resource type="Script" uid="uid://d4ipkk1w7rjan" path="res://hitbox/hitbox_enter.gd" id="3_wqjb8"]
[ext_resource type="Script" uid="uid://ca4ihn4jasw5t" path="res://hurtbox/hurtbox.gd" id="4_aoxx6"]

[sub_resource type="Animation" id="Animation_wqjb8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_aoxx6"]
resource_name = "die"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e3ow6"]
_data = {
&"RESET": SubResource("Animation_wqjb8"),
&"die": SubResource("Animation_aoxx6")
}

[sub_resource type="Animation" id="Animation_ybl6e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wg5pg"]
resource_name = "hurt"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqjb8"]
_data = {
&"RESET": SubResource("Animation_ybl6e"),
&"hurt": SubResource("Animation_wg5pg")
}

[node name="ClawnCommon" type="CharacterBody2D" unique_id=1629721795]
script = ExtResource("1_mayyk")
hp = 200.0
metadata/_custom_type_script = "uid://c41r12fxe2txp"

[node name="Graphic" type="Node2D" parent="." unique_id=749922570]

[node name="Sprite2D" type="Sprite2D" parent="Graphic" unique_id=999305463]
texture = ExtResource("2_mayyk")
region_enabled = true
region_rect = Rect2(90, 0, 214, 187)

[node name="Hitbox" type="Area2D" parent="Graphic" unique_id=200092977]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 16
script = ExtResource("3_wqjb8")
damage = 10.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Graphic/Hitbox" unique_id=215787677]
polygon = PackedVector2Array(-65, -1, -59, -37, -37, -58, 0, -65, 43, -54, 56, -42, 63, -20, 65, -1, 51, 48, 44, 69, 30, 84, 0, 93, -28, 87, -42, 72)

[node name="Hurtbox" type="Area2D" parent="Graphic" unique_id=1250402073]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 0
monitorable = false
script = ExtResource("4_aoxx6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Graphic/Hurtbox" unique_id=1268040525]
polygon = PackedVector2Array(-65, -1, -59, -37, -37, -58, 0, -65, 43, -54, 56, -42, 63, -20, 65, -1, 51, 48, 44, 69, 30, 84, 0, 93, -28, 87, -42, 72)

[node name="TimerIdle" type="Timer" parent="." unique_id=936166905]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="TimerMove" type="Timer" parent="." unique_id=1085466781]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="TimerAttack" type="Timer" parent="." unique_id=940712705]
unique_name_in_owner = true
wait_time = 1.65
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1980588366]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_e3ow6")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." unique_id=1014338367]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_wqjb8")

[connection signal="get_damage" from="Graphic/Hurtbox" to="." method="_on_hurtbox_get_damage"]
